Fix being unable to encode processing patterns (#7855)